added basic layout... to be continued

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -16,19 +16,27 @@
   </style>
 </head>
 <body>
+  <section class="main">
+    <div class="card">
+      <img class="nft-image" src="images/image-equilibrium.jpg" alt="nft-image">
+      <h3>Equilibrium #3429</h3>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
 
-  Equilibrium #3429
+      <div class="values">
+        <img src="images/icon-ethereum.svg" alt="ethereum">
+        <p class="eth">0.041 ETH</p>
+        <img class="clock" src="images/icon-clock.svg" alt="clock">
+        <p>3 days left</p>
+      </div>
 
-  Our Equilibrium collection promotes balance and calm.
+      <img class="avatar" src="images/image-avatar.png" alt="avatar">
+      <p class="card-footer">Creation of <span class="name">Stranger</span></p>
+    </div>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Zac Williamson</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Zac Williamson</a>.
+    </div>
+</section>
 </body>
 </html>
