minor style update

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -23,14 +23,15 @@
       <p>Our Equilibrium collection promotes balance and calm.</p>
 
       <div class="values">
-        <img src="images/icon-ethereum.svg" alt="ethereum">
+        <img class="eth-icon" src="images/icon-ethereum.svg" alt="ethereum">
         <p class="eth">0.041 ETH</p>
-        <img class="clock" src="images/icon-clock.svg" alt="clock">
+        <img class="clock-icon" src="images/icon-clock.svg" alt="clock">
         <p>3 days left</p>
       </div>
-
-      <img class="avatar" src="images/image-avatar.png" alt="avatar">
-      <p class="card-footer">Creation of <span class="name">Stranger</span></p>
+      <div class="creation-container">
+        <img class="avatar" src="images/image-avatar.png" alt="avatar">
+        <p class="card-footer">Creation of <span class="name">Stranger</span></p>
+      </div>
     </div>
 
     <div class="attribution">
